[package]
name = "earley"
version = "0.1.0"
edition = "2021"

[features]
default = ["py"]
py = ["dep:pyo3"]

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "earley"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
itertools = "0.12.1"
pyo3 = { version = "0.21.2", features = ["extension-module"], optional=true }
thiserror = "1.0.60"
